[styles] Collapse, ratings and footer corrections

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -2,6 +2,10 @@
 
 /* Mobile styles */
 
+.Home {
+  padding-bottom: 20rem;
+}
+
 .card-generator a {
   text-decoration: none;
 }
