--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #ff6060;
-  padding: 0.5625rem 2rem 0.5625rem 0.1875rem;
+  padding: 0.5rem 0.625rem 0.5rem 0.6875rem;
   border-radius: 0.3125rem;
   cursor: pointer;
   margin-top: 1.25rem;
@@ -32,6 +32,7 @@
 }
 
 .collapse-header img {
+  width: 15px;
   transform: rotate(0deg);
   transition: transform 0.3s ease-in-out;
 }
@@ -57,8 +58,17 @@
   .collapse-content {
     padding: 1.875rem 1.6875rem 1.1875rem 1.125rem;
   }
+
+  .collapse-header {
+    padding: 0.9375rem 0.6875rem 0.9375rem 1.25rem;
+  }
+
   .collapse-header p {
     font-size: 1.5rem;
+  }
+
+  .collapse-header img {
+    width: auto;
   }
 
   .collapse-content p {
