--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,6 +4,7 @@
 
 .footer {
   position: absolute;
+  bottom: 0;
   left: 0;
   display: flex;
   justify-content: center;
@@ -12,6 +13,7 @@
   background-color: #000;
   padding: 5.125rem 0 3.875rem;
   margin-top: 4.375rem;
+  overflow: hidden;
 }
 
 .footer_logo {
