--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
 /* Mobile styles */
 
 body {
+  position: relative;
   margin: 0 auto;
   padding: 0 1.25rem;
   font-family: "Montserrat", sans-serif;
@@ -13,6 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 1440px;
+  min-height: 100vh;
 }
 
 code {
